# git-wip

./: .codecov.yml  .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile-deb  Makefile  README.markdown  README.md  dependencies.sh  dev.sh  flake.nix  git-wip  test-git-wip.sh
.github/workflows/: ci.yml
Attic/: git-wip
Attic/tests/: test-git-wip.sh
cmake/: GitVersion.cmake  GitVersion.sh
doc/: git-wip.txt
emacs/: git-wip-mode.el  git-wip.el
lua/git-wip/: init.lua
src/: CMakeLists.txt  cmd_config.cpp  cmd_config.hpp  cmd_delete.cpp  cmd_delete.hpp  cmd_list.cpp  cmd_list.hpp  cmd_log.cpp  cmd_log.hpp  cmd_save.cpp  cmd_save.hpp  cmd_status.cpp  cmd_status.hpp  color.cpp  color.hpp  command.hpp  git_guards.hpp  git_helpers.hpp  main.cpp  print_compat.hpp  prompt.md  string_helpers.hpp  wip_helpers.hpp
sublime/: gitwip.py
test/: cap-run.sh  legacy-tests.sh  runner.py
test/cli/: CMakeLists.txt  lib.sh  profile.sh  test_delete.sh  test_help.sh  test_legacy.sh  test_list.sh  test_save_file.sh  test_save_subdir.sh  test_spaces.sh  test_status.sh  test_status2.sh  test_status_ref.sh
test/legacy/: CMakeLists.txt  lib.sh  test_general.sh
test/nvim/: CMakeLists.txt  lib.sh  test_nvim_background.sh  test_nvim_buffers.sh  test_nvim_single.sh  test_nvim_windows.sh
test/runner-test/: CMakeLists.txt  runner-test.blind-run.output  runner-test.dry-run.output  runner-test.json
test/smoke/: smoke.json
test/unit/: CMakeLists.txt  test_git_helpers.cpp  test_repo_fixture.hpp  test_string_helpers.cpp  test_wip_helpers.cpp
vim/plugin/: git-wip.vim
